--- a/styles/vedio.css
+++ b/styles/vedio.css
@@ -1,73 +1,70 @@
-
-.thumbnail-row{
+.thumbnail-row {
   margin-bottom: 8px;
-  position:relative;
+  position: relative;
 }
 .thumbnail {
   width: 100%;
 }
-.vedio-info-grid{
-  display:grid;
+.vedio-info-grid {
+  display: grid;
   grid-template-columns: 50px 1fr;
 }
-.profile-picture{
-  width:36px;
-  border-radius:105px;
+.profile-picture {
+  width: 36px;
+  border-radius: 105px;
 }
-.vedio-info{
-
-  margin-left:4px;   
+.vedio-info {
+  margin-left: 4px;
 }
-.vedio-title{
+.vedio-title {
   margin-top: 0px;
 }
-.vedio-title{
+.vedio-title {
   font-weight: 500;
   font-size: 14px;
   line-height: 20px;
-  margin-bottom:8px;
+  margin-bottom: 8px;
 }
-.vedio-author{
-  color:gray;
-  font-size:12px;
+.vedio-author {
+  color: gray;
+  font-size: 12px;
   margin-bottom: 0px;
-  margin-top: 10px; 
+  margin-top: 10px;
 }
-.vedio-stats{
-  color:gray;
-  font-size:12px;
-  margin-top: 4px; 
+.vedio-stats {
+  color: gray;
+  font-size: 12px;
+  margin-top: 4px;
 }
-.vedio-time{
+.vedio-time {
   background-color: black;
-  color:white;
-  position:absolute;
-  bottom:8px;
-  right:5px;
-  font-size:12px;
-  font-weight:500;
-  padding:4px;
+  color: white;
+  position: absolute;
+  bottom: 8px;
+  right: 5px;
+  font-size: 12px;
+  font-weight: 500;
+  padding: 4px;
   border-radius: 2px;
-}   
-.vedio-grid{
+}
+.vedio-grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 16px;
   row-gap: 40px;
-
 }
-@media (max-width: 1099px) {
+@media (max-width: 700px) {
+  .vedio-grid {
+    grid-template-columns: 1fr;
+  }
+}
+@media (min-width: 701px) and (max-width: 1095px) {
   .vedio-grid {
     grid-template-columns: 1fr 1fr;
   }
 }
-@media (min-width: 1100px) and (max-width:1365px){
+@media (min-width: 1096px) {
   .vedio-grid {
     grid-template-columns: 1fr 1fr 1fr;
-  } 
-}
-@media (min-width:1366px) {
-  .vedio-grid {
-    grid-template-columns: 1fr 1fr 1fr;
-  }   
+  }
 }
