--- a/styles/header.css
+++ b/styles/header.css
@@ -33,7 +33,7 @@
 }
 .middle-section {
   flex: 1;
-  margin-left: 70px;
+  margin-left: 257px;
   margin-right: 35px;
   max-width: 500px;
   display: flex;
@@ -42,10 +42,10 @@
 }
 .search-bar {
   flex: 1;
-  width: 0;
+  width: 19px;
   height: 36px;
-  padding-left: 15px;
-  margin-left: -65px;
+  padding-left: 16px;
+  margin-left: -158px;
   font-size: 16px;
   border: 1px solid rgb(216, 213, 213);
   border-radius: 2px;
@@ -58,17 +58,23 @@
 }
 .search-button {
   height: 40px;
-  width: 66px;
-  background-color: rgb(240, 240, 240);
+  width: 63px;
+  background-color:#f8f8f8;
   border-width: 1px;
   border-style: solid;
   border-color: rgb(189, 186, 186);
-  margin-left: -1px;
-  margin-right: 10px;
+  margin-left: -5px;
+  margin-right: 18px;
   border: 1px solid rgb(216, 213, 213);
   border-radius: 2px;
   border-top-right-radius: 60px;
   border-bottom-right-radius: 60px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.search-icon {
+  height: 24px;
+  padding-right: -3px;;
 }
 .search-button,
 .voice-search-button,
@@ -121,43 +127,44 @@
 .youtube-logo-container:hover .home-tooltip {
   opacity: 1;
 }
-.search-icon {
-  height: 25px;
-}
+
 .voice-search-button {
   height: 40px;
   width: 40px;
   border: none;
   border-radius: 20px;
-  background-color: rgb(236, 236, 236);
+  background-color: #f2f2f2;
 }
 .voice-search-icon {
-  height: 20px;
+  height: 24px;
 }
 .right-section {
   width: 180px;
-  margin-right: 26px;
+  margin-right: 29px;
   display: flex;
   flex-direction: row;
+  justify-content:space-evenly;
   align-items: center;
   flex-shrink: 0;
-  flex-align: space-between;
+  
 }
 .upload-icon {
   height: 24px;
   margin: 0px;
-  margin-left: 10px;
+  margin-left: -88px;
+  padding-left: 125px;
+  margin-right:42px;
 }
 .notifications-icon {
   height: 28px;
   padding-top: 3px;
   margin: 0px;
-  margin-left: 20px;
+  margin-left: -23px;
 }
 .notifications-count {
   position: absolute;
   top: 1px;
-  right: -4px;
+  right: -9px;
   background-color: rgb(187, 42, 42);
   color: white;
   padding-left: 5px;
@@ -170,6 +177,6 @@
 .my-channel-picture {
   height: 33px;
   border-radius: 16px;
-
-  margin-left: 59px;
+margin-right: -6px;
+  margin-left: 23px;
 }
