--- a/styles/vedio.css
+++ b/styles/vedio.css
@@ -4,6 +4,7 @@
 }
 .thumbnail {
   width: 100%;
+  border-radius: 8px;
 }
 .vedio-info-grid {
   display: grid;
@@ -17,17 +18,15 @@
   margin-left: 4px;
 }
 .vedio-title {
-  margin-top: 0px;
-}
-.vedio-title {
   font-weight: 500;
-  font-size: 14px;
+  margin-top: 0px;
+  font-size: 15px;
   line-height: 20px;
   margin-bottom: 8px;
 }
 .vedio-author {
   color: gray;
-  font-size: 12px;
+  font-size: 14px;
   margin-bottom: 0px;
   margin-top: 10px;
 }
