--- a/styles/header.css
+++ b/styles/header.css
@@ -18,13 +18,16 @@
 }
 .hamburger-menu {
   height: 24px;
-  margin-left: 24px;
-  margin-right: 20px;
+  margin-left: 14px;
+  margin-right: 10px;
+  padding:10px;
 }
 .hamburger-menu:hover {
-  background-color: rgb(221, 215, 215);
+  background-color: #f2f2f2;
   border: none;
-  border-radius: 3px;
+  border-radius: 50px;
+
+
 }
 
 .youtube-logo {
@@ -156,7 +159,7 @@
   margin-right:42px;
 }
 .notifications-icon {
-  height: 28px;
+  height: 24px;
   padding-top: 3px;
   margin: 0px;
   margin-left: -23px;
